--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <!-- icon -->
     <link rel="icon" href="/assets/image/logo-pendek.png" />
     <!-- css -->
+    <link rel="stylesheet" href="/assets/css/maincss/style.css">
     <!-- bootstrap -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
