--- a/index.html
+++ b/index.html
@@ -8,21 +8,30 @@
     <link rel="icon" href="/assets/image/logo-pendek.png" />
     <!-- css -->
     <link rel="stylesheet" href="/assets/css/maincss/style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto Sans">
     <!-- bootstrap -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js">
     <!-- fonts -->
   </head>
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
+    <!-- jquery -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <!-- bootstrap -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"
       integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD"
       crossorigin="anonymous">
     </script>
+    <script src="/assets/js/auth/jquery.min.js"></script>
+    <script src="/assets/js/auth/popper.js"></script>
+    <script src="/assets/js/auth/bootstrap.min.js"></script>
+    <script src="/assets/js/auth/main.js"></script>
   </body>
 </html>
