--- a/index.html
+++ b/index.html
@@ -12,11 +12,19 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto Sans">
     <!-- bootstrap -->
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+    rel="stylesheet"
     />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js">
-    <!-- fonts -->
+    <style>
+      ::-webkit-scrollbar {
+          width: 8px;
+      }
+      ::-webkit-scrollbar-thumb {
+          background: #244065;
+          border-radius:none;
+      }
+  </style>
   </head>
   <body>
     <div id="app"></div>
