--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <link href="/assets/vendor/remixicon/remixicon.css" rel="stylesheet">
     <link href="/assets/vendor/simple-datatables/style.css" rel="stylesheet">
   
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js">
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"> -->
     <style>
       ::-webkit-scrollbar {
           width: 8px;
@@ -51,5 +51,6 @@
     <script src="/assets/js/auth/popper.js"></script>
     <script src="/assets/js/auth/bootstrap.min.js"></script>
     <script src="/assets/js/auth/main.js"></script>
+    <script src="/assets/js/login.js"></script>
   </body>
 </html>
