--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
       integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD"
       crossorigin="anonymous">
     </script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="/assets/js/auth/jquery.min.js"></script>
     <script src="/assets/js/auth/popper.js"></script>
     <script src="/assets/js/auth/bootstrap.min.js"></script>
