--- a/index.html
+++ b/index.html
@@ -53,5 +53,7 @@
     <script src="/assets/js/auth/bootstrap.min.js"></script>
     <script src="/assets/js/auth/main.js"></script>
     <script src="/assets/js/login.js"></script>
+    <script src="/assets/js/script.js"></script>
+
   </body>
 </html>
