--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
     <script src="/assets/js/auth/main.js"></script>
     <script src="/assets/js/login.js"></script>
     <script src="/assets/js/script.js"></script>
-
+    <script src="/assets/js/tooltips.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   </body>
 </html>
