--- a/index.html
+++ b/index.html
@@ -37,7 +37,12 @@
   </style>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+
+
+      <div id="preloader"></div>
+    </div>
+  
     <script type="module" src="/src/main.js"></script>
     <!-- jquery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
