Update - REVISIIIIIIIIII - add AccountPage

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Mepoly Sales App</title>
     <!-- icon -->
     <link rel="icon" href="/assets/image/logo-pendek.png" />
+    <link href="https://unpkg.com/vue3-easy-data-table/dist/style.css" rel="stylesheet">
     <!-- css -->
     <link rel="stylesheet" href="/assets/css/maincss/style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css">
@@ -27,7 +28,7 @@
       }
   </style>
   </head>
-  <body>
+  <body>  
     <div id="app">
 
 
@@ -37,6 +38,8 @@
     <script type="module" src="/src/main.js"></script>
     <!-- jquery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue@3.2.1/dist/vue.global.js"></script>
+<script src="https://unpkg.com/vue3-easy-data-table"></script>
     <!-- bootstrap -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"
