--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
     rel="stylesheet"
     />
+    <link rel="stylesheet" href="sweetalert2.min.css">
     <style>
       ::-webkit-scrollbar {
           width: 8px;
