--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
     rel="stylesheet"
     />
-    <link rel="stylesheet" href="sweetalert2.min.css">
+    <link rel="stylesheet" href="node_modules\sweetalert2\dist\sweetalert2.min.css">
+    <link rel="stylesheet" href="node_modules\sweetalert2\dist\sweetalert2.css">
+
     <style>
       ::-webkit-scrollbar {
           width: 8px;
@@ -41,6 +43,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue@3.2.1/dist/vue.global.js"></script>
 <script src="https://unpkg.com/vue3-easy-data-table"></script>
+<script src="node_modules\sweetalert2\dist\sweetalert2.all.min.js"></script>
+<script src="node_modules\sweetalert2\dist\sweetalert2.min.js"></script>
+
     <!-- bootstrap -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"
