--- a/index.html
+++ b/index.html
@@ -5,52 +5,68 @@
     <title>Mepoly Sales App</title>
     <!-- icon -->
     <link rel="icon" href="/assets/image/logo-pendek.png" />
-    <link href="https://unpkg.com/vue3-easy-data-table/dist/style.css" rel="stylesheet">
+    <link
+      href="https://unpkg.com/vue3-easy-data-table/dist/style.css"
+      rel="stylesheet"
+    />
     <!-- css -->
-    <link rel="stylesheet" href="/assets/css/maincss/style.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto Sans">
-    <link href="/assets/css/maincss/app.css" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/assets/css/maincss/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Noto Sans"
+    />
+    <link href="/assets/css/maincss/app.css" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap"
+      rel="stylesheet"
+    />
     <!-- bootstrap -->
     <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
-    rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
     />
-    <link rel="stylesheet" href="node_modules\sweetalert2\dist\sweetalert2.min.css">
-    <link rel="stylesheet" href="node_modules\sweetalert2\dist\sweetalert2.css">
+    <link
+      rel="stylesheet"
+      href="node_modules\sweetalert2\dist\sweetalert2.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="node_modules\sweetalert2\dist\sweetalert2.css"
+    />
 
     <style>
       ::-webkit-scrollbar {
-          width: 8px;
+        width: 8px;
       }
       ::-webkit-scrollbar-thumb {
-          background: #244065;
-          border-radius: 5px;
+        background: #244065;
+        border-radius: 5px;
       }
-  </style>
+    </style>
   </head>
-  <body>  
+  <body>
     <div id="app">
-
-
       <div id="preloader"></div>
     </div>
-  
+
     <script type="module" src="/src/main.js"></script>
     <!-- jquery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue@3.2.1/dist/vue.global.js"></script>
-<script src="https://unpkg.com/vue3-easy-data-table"></script>
-<script src="node_modules\sweetalert2\dist\sweetalert2.all.min.js"></script>
-<script src="node_modules\sweetalert2\dist\sweetalert2.min.js"></script>
+    <script src="https://unpkg.com/vue3-easy-data-table"></script>
+    <script src="node_modules\sweetalert2\dist\sweetalert2.all.min.js"></script>
+    <script src="node_modules\sweetalert2\dist\sweetalert2.min.js"></script>
 
     <!-- bootstrap -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"
       integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD"
-      crossorigin="anonymous">
-    </script>
+      crossorigin="anonymous"
+    ></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="/assets/js/auth/jquery.min.js"></script>
     <script src="/assets/js/auth/popper.js"></script>
