--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
     <script type="module" src="/src/main.js"></script>
     <!-- jquery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vue@3.2.1/dist/vue.global.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/vue@3.2.1/dist/vue.global.js"></script>
     <script src="https://unpkg.com/vue3-easy-data-table"></script>
     <script src="node_modules\sweetalert2\dist\sweetalert2.all.min.js"></script>
-    <script src="node_modules\sweetalert2\dist\sweetalert2.min.js"></script>
+    <script src="node_modules\sweetalert2\dist\sweetalert2.min.js"></script> -->
 
     <!-- bootstrap -->
     <script
@@ -68,13 +68,13 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="/assets/js/auth/jquery.min.js"></script>
+    <!-- <script src="/assets/js/auth/jquery.min.js"></script>
     <script src="/assets/js/auth/popper.js"></script>
     <script src="/assets/js/auth/bootstrap.min.js"></script>
     <script src="/assets/js/auth/main.js"></script>
     <script src="/assets/js/login.js"></script>
     <script src="/assets/js/script.js"></script>
     <script src="/assets/js/tooltips.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script> -->
   </body>
 </html>
